--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,77 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oxygen&display=swap");
+
+/* ------------------------navigation bar----------------------- */
+/* -------------------------------------------------------------*/
+
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: white;
+  z-index: 1000;
 }
 
+.navbar ul {
+  list-style: none;
+  /* text-align: center; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  /* padding: 20px; */
+}
+
+.navbar ul li {
+  color: black;
+  font-size: 2em;
+  /* padding-right: 20px; */
+}
+
+.navbar ul li > .active {
+  border-bottom: 1px solid black;
+}
+
+.navbar ul li:hover {
+  font-size: 35px;
+  font-weight: bolder;
+  cursor: pointer;
+}
+
+.home-section {
+  /* height: 100vh; */
+  background-image: url(./sections/pics/pastelback.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.about-section {
+  /* height: 100vh; */
+  background-color: #f9efef;
+  align-content: stretch;
+}
+
+.experiences-section {
+  /* height: 100vh; */
+  background-color: #f5dddd;
+}
+
+.projects-section {
+  /* height: 100vh; */
+  background-color: #f9f9f9;
+}
+
+.contact-section {
+  /* height: 100vh; */
+  background-color: #f9f1f0;
+}
+
+/* 
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
   pointer-events: none;
 }
+
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -35,4 +101,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
