--- a/src/sections/About.css
+++ b/src/sections/About.css
@@ -50,12 +50,12 @@
   padding-left: 20px;
   padding-right: 20px;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: right;
   padding-bottom: 100px;
 }
 
 .inner-basic-info {
-  width: 1000px;
+  width: 600px;
   padding-left: 150px;
   padding-top: 30px;
   /* position: 400px; */
@@ -85,6 +85,8 @@
   font-size: 20px;
   padding-left: 40px;
   padding-right: 40px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   margin: 80px;
   /* width: 30px; */
   border-radius: 20px;
