--- a/src/sections/Contact.css
+++ b/src/sections/Contact.css
@@ -23,7 +23,7 @@
 }
 
 .contact-link {
-  flex-flow: column;
+  /* flex-flow: column; */
   /* width: 500px; */
   filter: drop-shadow(0 6px 20px #f5dddd);
   border-radius: 10px;
@@ -64,8 +64,8 @@
   text-decoration: underline;
 }
 
-@media (max-width: 1200px) {
-  .pic-links {
+@media (max-width: 900px) {
+  .contact-container {
     display: flex;
     flex-direction: column;
     /* align-items: center; */
