--- a/src/App.css
+++ b/src/App.css
@@ -14,17 +14,14 @@
 
 .navbar ul {
   list-style: none;
-  /* text-align: center; */
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  /* padding: 20px; */
 }
 
 .navbar ul li {
   color: black;
   font-size: 2em;
-  /* padding-right: 20px; */
 }
 
 .navbar ul li > .active {
@@ -38,68 +35,25 @@
 }
 
 .home-section {
-  /* height: 100vh; */
   background-image: url(./sections/pics/pastelback.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .about-section {
-  /* height: 100vh; */
-  background-color: #f9efef;
+  background-color: #f2edf4;
   align-content: stretch;
 }
 
 .experiences-section {
-  /* height: 100vh; */
-  background-color: #f5dddd;
+  background-color: #cbb8d0;
   z-index: 800;
 }
 
 .projects-section {
-  /* height: 100vh; */
-  background-color: #f9f9f9;
+  background-color: #efeaf1;
 }
 
 .contact-section {
-  /* height: 100vh; */
-  background-color: #f9f1f0;
+  background-color: #a68cb1;
 }
-
-/* 
-.App-logo {
-  height: 20vmin;
-  pointer-events: none;
-}
-
-
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
