--- a/src/sections/About.css
+++ b/src/sections/About.css
@@ -4,8 +4,6 @@
 .title {
   font-size: 4em;
   padding-top: 8%;
-  /* text-align: left; */
-  /* margin-left: 10%; */
   display: block;
 }
 
@@ -14,58 +12,43 @@
   flex-direction: row;
   justify-content: space-around;
   padding-left: 8%;
-  /* padding-right: %; */
 }
 
 .about-image {
-  width: 240px;
-  height: 250px;
+  width: 245px;
+  height: 255px;
   border-radius: 50%;
-  /* border-color: black; */
+  margin-right: 20px;
   border: 7px solid white;
 }
 
 #let-me {
   font-size: 40px;
   padding-top: 1%;
-  /* text-align: center; */
-  /* text-size-adjust: auto; */
 }
 
 #introduction {
   font-family: "Oxygen";
   font-size: 20px;
-  /* text-align: center; */
-  margin-left: 50px;
-  /* margin-left: 40%; */
-  /* width: 0%; */
+  padding-right: 50px;
   max-width: 800px;
 }
 
 .basic-info {
   font-size: 25px;
-  /* text-align: left; */
-  /* margin-top: 7%; */
   display: flex;
-  padding-left: 20px;
-  padding-right: 20px;
   flex-direction: row;
-  justify-content: right;
-  padding-bottom: 100px;
+  justify-content: space-around;
+  padding-bottom: 50px;
 }
 
 .inner-basic-info {
   width: 600px;
   padding-left: 150px;
   padding-top: 30px;
-  /* position: 400px; */
 }
 
 @media (max-width: 900px) {
-  .intro-container {
-    flex-direction: column;
-    align-items: center;
-  }
   #introduction {
     text-align: center;
     margin-left: 0;
@@ -73,22 +56,27 @@
   #let-me {
     text-align: center;
   }
+  .intro-container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .basic-info {
+    flex-direction: column;
+    align-items: center;
+  }
+  .inner-basic-info {
+    text-align: center;
+    padding-left: 0px;
+  }
 }
 
 #resume {
-  /* margin-right: 8%; */
-  /* margin-left: 35%; */
-  /* text-align: center; */
-  background-color: #d8c8c7;
+  background-color: #757575;
   color: black;
   font-family: "Oswald";
   font-size: 20px;
-  padding-left: 40px;
-  padding-right: 40px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 10px 40px 10px 40px;
   margin: 80px;
-  /* width: 30px; */
   border-radius: 20px;
   border: none;
   cursor: pointer;
