--- a/src/sections/Projects.css
+++ b/src/sections/Projects.css
@@ -18,8 +18,6 @@
 
 .projects-item {
   align-self: center;
-  flex: 1;
-  margin: 0 1rem;
   border-radius: 10px;
 }
 
@@ -27,9 +25,9 @@
   display: block;
   flex-flow: column;
   width: 500px;
-  box-shadow: 0 6px 20px #f5dddd;
-  -webkit-filter: drop-shadow(0 6px 20px#f5dddd);
-  filter: drop-shadow(0 6px 20px #f5dddd);
+  box-shadow: 0 6px 20px white;
+  -webkit-filter: drop-shadow(0 6px 20px white);
+  filter: drop-shadow(0 6px 20px white);
   border-radius: 10px;
   overflow: hidden;
   text-decoration: none;
