--- a/src/sections/Projects.css
+++ b/src/sections/Projects.css
@@ -70,7 +70,7 @@
   border: 2px solid black;
   top: 0;
   display: block;
-  width: 400px;
+  width: 100vw;
   max-width: 100%;
   height: 350px;
   max-height: 100%;
