--- a/src/sections/About.css
+++ b/src/sections/About.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oxygen&display=swap");
 
-.title {
+.about-title {
   font-size: 4em;
-  padding-top: 8%;
   display: block;
+  padding: 8% 0px 0px 50px;
 }
 
 .intro-container {
@@ -44,30 +44,7 @@
 
 .inner-basic-info {
   width: 600px;
-  padding-left: 150px;
-  padding-top: 30px;
-}
-
-@media (max-width: 900px) {
-  #introduction {
-    text-align: center;
-    margin-left: 0;
-  }
-  #let-me {
-    text-align: center;
-  }
-  .intro-container {
-    flex-direction: column;
-    align-items: center;
-  }
-  .basic-info {
-    flex-direction: column;
-    align-items: center;
-  }
-  .inner-basic-info {
-    text-align: center;
-    padding-left: 0px;
-  }
+  padding: 30px 0px 0px 150px;
 }
 
 #resume {
@@ -79,6 +56,40 @@
   padding: 10px 40px 10px 40px;
   margin: 80px;
   border-radius: 20px;
-  /* border: none; */
   cursor: pointer;
+}
+
+@media (max-width: 900px) {
+  #introduction {
+    text-align: center;
+    margin: 10px 15px 0px 15px;
+    padding-right: 0px;
+  }
+  #let-me {
+    text-align: center;
+  }
+  .intro-container {
+    flex-direction: column;
+    align-items: center;
+    padding-left: 0px;
+  }
+  .basic-info {
+    flex-direction: column;
+    align-items: center;
+  }
+  .inner-basic-info {
+    text-align: center;
+    padding-left: 0px;
+  }
+
+  #resume {
+    margin: 40px;
+  }
+}
+
+@media (max-width: 530px) {
+  .about-title {
+    text-align: center;
+    padding: 8% 0px 20px 0px;
+  }
 }
