--- a/src/sections/Contact.css
+++ b/src/sections/Contact.css
@@ -8,6 +8,19 @@
 /* ------------------------contact page----------------------- */
 /* -------------------------------------------------------------*/
 
+.contact-title {
+  font-size: 4em;
+  display: block;
+  padding: 8% 0px 0px 50px;
+}
+
+.contact-blurb {
+  font-size: 20px;
+  font-family: "Oxygen";
+  text-align: left;
+  padding: 0px 0px 20px 100px;
+}
+
 .contact-container {
   display: flex;
   flex-flow: row wrap;
@@ -15,16 +28,7 @@
   text-align: center;
 }
 
-.contact-item {
-  flex: 1;
-  align-items: baseline;
-  margin: 0 1rem;
-  border-radius: 10px;
-}
-
 .contact-link {
-  /* flex-flow: column; */
-  /* width: 500px; */
   filter: drop-shadow(0 6px 20px #f5dddd);
   border-radius: 10px;
   overflow: hidden;
@@ -35,44 +39,71 @@
 }
 
 .contact-img {
-  /* position: absolute; */
-  cursor: pointer;
-  /* top: 0; */
   display: block;
   width: 80px;
   height: 80px;
-  /* object-fit: fill; */
   transition: all 0.2s linear;
-  margin-left: auto;
-  margin-right: auto;
-  /* display: flex;
-  align-items: baseline; */
+  margin: 0px auto 0px auto;
 }
 
 .contact-info {
-  padding-top: 10px;
-  padding-left: 30px;
+  flex: 1;
+  align-items: baseline;
+  margin: 0 1rem;
+  border-radius: 10px;
+  padding: 10px 0px 20px 30px;
+  filter: drop-shadow(0 6px 20px #f5dddd);
+  border-radius: 10px;
+  text-decoration: none;
+  color: black;
+  font-size: 30px;
+}
+
+.contact-caption {
+  font-family: "Oswald";
+  font-weight: bold;
+  margin: 30px 0px 35px 0px;
 }
 
 .contact-text {
   color: black;
   font-size: 25px;
-  /* line-height: 20px; */
-  /* width: 450px; */
   align-items: center;
   font-weight: lighter;
   text-decoration: underline;
+  cursor: pointer;
+}
+
+.contact-text:hover {
+  opacity: 0.5;
 }
 
 @media (max-width: 900px) {
   .contact-container {
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
   }
-  /* .my-info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  } */
+  .contact-info {
+    padding: 0px 0px 20px 0px;
+  }
+  .contact-caption {
+    margin: 5px 0px 5px 0px;
+  }
+  .contact-text {
+    margin-top: 15px;
+  }
+  .contact-img {
+    margin-top: 14px;
+  }
+}
+
+@media (max-width: 530px) {
+  .contact-title {
+    text-align: center;
+    padding: 8% 0px 5px 0px;
+  }
+  .contact-blurb {
+    text-align: center;
+    padding: 0px 0px 15px 0px;
+  }
 }
