--- a/src/sections/Home.css
+++ b/src/sections/Home.css
@@ -6,8 +6,7 @@
 
 .title {
   font-size: 4em;
-  padding-top: 8%;
-  padding-left: 50px;
+  padding: 8% 0px 0px 50px;
   display: block;
 }
 
@@ -34,10 +33,9 @@
   justify-content: space-around;
   width: 45px;
   height: 45px;
-  padding-top: 3%;
+  padding: 3% 0px 225px 0px;
   margin: 20px;
   cursor: pointer;
-  padding-bottom: 225px;
 }
 
 .logos:hover {
